[package]
name = "audio-worker-web"
version = "0.1.0"
description = "Audio extraction worker for m3u8-preview-go — Web 版（Axum HTTP server，Docker 部署）"
authors = ["hor1zon777"]
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "audio-worker"
path = "src/main.rs"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
  "stream",
  "rustls-tls",
] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误 / 日志
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具类
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
once_cell = "1"
futures-util = "0.3"

# SHA-256
sha2 = "0.10"
hex = "0.4"

# 临时工作目录
tempfile = "3"

# SQLite 任务历史
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI 参数解析
clap = { version = "4", features = ["derive"] }
